--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <main class="main">
       <section class="section-hero">
         <div class="container">
-          <h1 class="heading">
-            Hey there. I'm Anuar <br />
-            <span>I'm a software developer</span>
-          </h1>
+          <div class="section-hero__text">
+            <h1 class="heading">Hey there. I'm Anuar</h1>
+            <h2 class="heading--subtitle">I'm a software developer</h2>
+          </div>
           <p class="base-text">
             I can help you build a product , feature or website Look through
             some of my work and experience! If you like what you see and have a
