Style the works section, style the card component

--- a/index.html
+++ b/index.html
@@ -67,19 +67,93 @@
         </div>
       </section>
       <section class="section-works">
-        <h2 class="section-heading">My Recent Works</h2>
-        <div class="section-works__projects">
-          <div class="card">
-            <img src="" alt="Portfolio image" class="card__portfolio-img" />
-            <div class="card__portfolio-info">
-              <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
-              <ul class="card__list">
-                <li class="card__list-item">Ruby on Rails</li>
-                <li class="card__list-item">css</li>
-                <li class="card__list-item">JavaScript</li>
-                <li class="card__list-item">HTML</li>
-              </ul>
-              <button class="btn-cta">See Project</button>
+        <div class="container">
+          <h2 class="section-heading">My Recent Works</h2>
+          <div class="section-works__projects">
+            <div class="card">
+              <img
+                src="images/card-placeholder.png"
+                alt="Portfolio image"
+                class="card__portfolio-img"
+              />
+              <div class="card__portfolio-info">
+                <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
+                <ul class="card__list">
+                  <li class="card__list-item">Ruby on Rails</li>
+                  <li class="card__list-item">css</li>
+                  <li class="card__list-item">JavaScript</li>
+                  <li class="card__list-item">HTML</li>
+                </ul>
+                <button class="btn-cta">See Project</button>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="images/card-placeholder.png"
+                alt="Portfolio image"
+                class="card__portfolio-img"
+              />
+              <div class="card__portfolio-info">
+                <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
+                <ul class="card__list">
+                  <li class="card__list-item">Ruby on Rails</li>
+                  <li class="card__list-item">css</li>
+                  <li class="card__list-item">JavaScript</li>
+                  <li class="card__list-item">HTML</li>
+                </ul>
+                <button class="btn-cta">See Project</button>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="images/card-placeholder.png"
+                alt="Portfolio image"
+                class="card__portfolio-img"
+              />
+              <div class="card__portfolio-info">
+                <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
+                <ul class="card__list">
+                  <li class="card__list-item">Ruby on Rails</li>
+                  <li class="card__list-item">css</li>
+                  <li class="card__list-item">JavaScript</li>
+                  <li class="card__list-item">HTML</li>
+                </ul>
+                <button class="btn-cta">See Project</button>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="images/card-placeholder.png"
+                alt="Portfolio image"
+                class="card__portfolio-img"
+              />
+              <div class="card__portfolio-info">
+                <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
+                <ul class="card__list">
+                  <li class="card__list-item">Ruby on Rails</li>
+                  <li class="card__list-item">css</li>
+                  <li class="card__list-item">JavaScript</li>
+                  <li class="card__list-item">HTML</li>
+                </ul>
+                <button class="btn-cta">See Project</button>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="images/card-placeholder.png"
+                alt="Portfolio image"
+                class="card__portfolio-img"
+              />
+              <div class="card__portfolio-info">
+                <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
+                <ul class="card__list">
+                  <li class="card__list-item">Ruby on Rails</li>
+                  <li class="card__list-item">css</li>
+                  <li class="card__list-item">JavaScript</li>
+                  <li class="card__list-item">HTML</li>
+                </ul>
+                <button class="btn-cta">See Project</button>
+              </div>
             </div>
           </div>
         </div>
