--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
       </section>
       <section class="section-works">
         <div class="container">
-          <h2 class="section-heading">My Recent Works</h2>
+          <h2 class="section-heading section-heading--underlined">
+            My Recent Works
+          </h2>
           <div class="section-works__projects">
             <div class="card">
               <img
@@ -157,6 +159,16 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="section-about">
+        <h2 class="section-heading">About me</h2>
+        <p class="base-text">
+          I can help you build a product, feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
+        </p>
+        <button class="btn-cta">Get My Resume</button>
       </section>
     </main>
   </body>
