--- a/index.html
+++ b/index.html
@@ -169,6 +169,76 @@
           you need coded, don’t hestiate to contact me.
         </p>
         <button class="btn-cta">Get My Resume</button>
+
+        <div class="section-about__skills">
+          <div class="container">
+            <div class="card">
+              <div class="card__skills">
+                <div class="card__icon">
+                  <img src="images/icon-languages.svg" alt="" />
+                </div>
+                <h3 class="subheading">Languages</h3>
+                <ul class="card__list">
+                  <li class="card__list-item card__list-item--skill">
+                    JavaScript
+                  </li>
+                  <li class="card__list-item card__list-item--skill">Ruby</li>
+                  <li class="card__list-item card__list-item--skill">HTML</li>
+                  <li class="card__list-item card__list-item--skill">CSS</li>
+                  <li class="card__list-item card__list-item--skill">SCSS</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card__skills">
+                <div class="card__icon">
+                  <img src="images/icon-frameworks.svg" alt="" />
+                </div>
+                <h3 class="subheading">Frameworks</h3>
+                <ul class="card__list">
+                  <li class="card__list-item card__list-item--skill">
+                    JavaScript
+                  </li>
+                  <li class="card__list-item card__list-item--skill">React</li>
+                  <li class="card__list-item card__list-item--skill">
+                    Ruby on Rails
+                  </li>
+                  <li class="card__list-item card__list-item--skill">RSpec</li>
+                  <li class="card__list-item card__list-item--skill">
+                    Capybara
+                  </li>
+                  <li class="card__list-item card__list-item--skill">
+                    Selenium
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card__skills">
+                <div class="card__icon">
+                  <img src="images/icon-skills.svg" alt="" />
+                </div>
+                <h3 class="subheading">Skills</h3>
+                <ul class="card__list">
+                  <li class="card__list-item card__list-item--skill">
+                    JavaScript
+                  </li>
+                  <li class="card__list-item card__list-item--skill">
+                    Codekit
+                  </li>
+                  <li class="card__list-item card__list-item--skill">Github</li>
+                  <li class="card__list-item card__list-item--skill">
+                    Codepen
+                  </li>
+                  <li class="card__list-item card__list-item--skill">Gitlab</li>
+                  <li class="card__list-item card__list-item--skill">
+                    Terminal
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
