Replace card container and card components in the about section with semantic ul and li tags

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         <button class="btn-cta">Get My Resume</button>
 
         <div class="section-about__skills">
-          <div class="container">
-            <div class="card">
+          <ul class="container">
+            <li class="card">
               <div class="card__skills">
                 <div class="card__icon">
                   <img src="images/icon-languages.svg" alt="" />
@@ -188,8 +188,8 @@
                   <li class="card__list-item card__list-item--skill">SCSS</li>
                 </ul>
               </div>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
               <div class="card__skills">
                 <div class="card__icon">
                   <img src="images/icon-frameworks.svg" alt="" />
@@ -212,8 +212,8 @@
                   </li>
                 </ul>
               </div>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
               <div class="card__skills">
                 <div class="card__icon">
                   <img src="images/icon-skills.svg" alt="" />
@@ -236,8 +236,8 @@
                   </li>
                 </ul>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
