--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2 class="heading--subtitle">I'm a software developer</h2>
           </div>
           <p class="base-text">
-            I can help you build a product , feature or website Look through
+            I can help you build a product, feature or website. Look through
             some of my work and experience! If you like what you see and have a
             project you need coded, don’t hestiate to contact me.
           </p>
@@ -238,6 +238,37 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="section-contact">
+        <div class="container">
+          <p class="text-bold">
+            I'm always interested in hearing about new projects, so if you'd
+            like to chat please get in touch.
+          </p>
+          <form action="/" class="contanct-form">
+            <input
+              type="text"
+              placeholder="Full name"
+              class="contact-form__input"
+            />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email address"
+            />
+            <textarea
+              name="text"
+              id="text"
+              cols="30"
+              rows="10"
+              class="contact-form__textarea"
+              placeholder="Enter text here"
+            ></textarea>
+            <button type="submit" class="btn-cta">Get in touch</button>
+          </form>
         </div>
       </section>
     </main>
