--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
           </p>
-          <form action="/" class="contanct-form">
+          <form action="/" class="contact-form">
             <input
               type="text"
               placeholder="Full name"
