--- a/index.html
+++ b/index.html
@@ -247,17 +247,23 @@
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
           </p>
-          <form action="/" class="contact-form">
+          <form
+            action="https://formspree.io/f/mwkajyvy"
+            method="post"
+            class="contact-form"
+          >
             <input
               type="text"
               placeholder="Full name"
               class="contact-form__input"
+              maxlength="30"
             />
             <input
               type="email"
               name="email"
               id="email"
               placeholder="Email address"
+              class="contact-form__input"
             />
             <textarea
               name="text"
@@ -266,6 +272,7 @@
               rows="10"
               class="contact-form__textarea"
               placeholder="Enter text here"
+              maxlength="500"
             ></textarea>
             <button type="submit" class="btn-cta">Get in touch</button>
           </form>
