--- a/index.html
+++ b/index.html
@@ -278,6 +278,35 @@
           </form>
         </div>
       </section>
+      <footer class="section-footer">
+        <ul class="socials">
+          <li class="socials__item">
+            <a href="#" class="socials__link"
+              ><img src="images/twitter.svg" alt=""
+            /></a>
+          </li>
+          <li class="socials__item">
+            <a href="#" class="socials__link"
+              ><img src="images/github.svg" alt=""
+            /></a>
+          </li>
+          <li class="socials__item">
+            <a href="#" class="socials__link"
+              ><img src="images/linkedin.svg" alt=""
+            /></a>
+          </li>
+          <li class="socials__item">
+            <a href="#" class="socials__link"
+              ><img src="images/medium.svg" alt=""
+            /></a>
+          </li>
+          <li class="socials__item">
+            <a href="#" class="socials__link"
+              ><img src="images/angellist.svg" alt=""
+            /></a>
+          </li>
+        </ul>
+      </footer>
     </main>
   </body>
 </html>
