Add email to the footer section

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </div>
       </section>
       <footer class="section-footer">
-        <ul class="socials">
+        <ul class="socials section-footer__socials">
           <li class="socials__item">
             <a href="#" class="socials__link"
               ><img src="images/twitter.svg" alt=""
@@ -306,6 +306,7 @@
             /></a>
           </li>
         </ul>
+        <p class="base-text">anuarshaidenov@gmail.com</p>
       </footer>
     </main>
   </body>
