Make input fields required

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
               placeholder="Full name"
               class="contact-form__input"
               maxlength="30"
+              required
             />
             <input
               type="email"
@@ -264,6 +265,7 @@
               id="email"
               placeholder="Email address"
               class="contact-form__input"
+              required
             />
             <textarea
               name="text"
