Add required to the textarea

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
               class="contact-form__textarea"
               placeholder="Enter text here"
               maxlength="500"
+              required
             ></textarea>
             <button type="submit" class="btn-cta">Get in touch</button>
           </form>
