--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <li class="card__list-item">JavaScript</li>
                   <li class="card__list-item">HTML</li>
                 </ul>
-                <button class="btn-cta">See Project</button>
+                <button class="btn-cta" type="button">See Project</button>
               </div>
             </div>
             <div class="card">
@@ -103,7 +103,7 @@
                   <li class="card__list-item">JavaScript</li>
                   <li class="card__list-item">HTML</li>
                 </ul>
-                <button class="btn-cta">See Project</button>
+                <button class="btn-cta" type="button">See Project</button>
               </div>
             </div>
             <div class="card">
@@ -120,7 +120,7 @@
                   <li class="card__list-item">JavaScript</li>
                   <li class="card__list-item">HTML</li>
                 </ul>
-                <button class="btn-cta">See Project</button>
+                <button class="btn-cta" type="button">See Project</button>
               </div>
             </div>
             <div class="card">
@@ -137,7 +137,7 @@
                   <li class="card__list-item">JavaScript</li>
                   <li class="card__list-item">HTML</li>
                 </ul>
-                <button class="btn-cta">See Project</button>
+                <button class="btn-cta" type="button">See Project</button>
               </div>
             </div>
             <div class="card">
@@ -154,7 +154,7 @@
                   <li class="card__list-item">JavaScript</li>
                   <li class="card__list-item">HTML</li>
                 </ul>
-                <button class="btn-cta">See Project</button>
+                <button class="btn-cta" type="button">See Project</button>
               </div>
             </div>
           </div>
@@ -168,7 +168,7 @@
           of my work and experience! If you like what you see and have a project
           you need coded, don’t hestiate to contact me.
         </p>
-        <button class="btn-cta">Get My Resume</button>
+        <button class="btn-cta" type="button">Get My Resume</button>
 
         <div class="section-about__skills">
           <ul class="container">
@@ -243,10 +243,10 @@
 
       <section class="section-contact">
         <div class="container">
-          <p class="text-bold">
+          <h2 class="section-heading">
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
-          </p>
+          </h2>
           <form
             action="https://formspree.io/f/mwkajyvy"
             method="post"
