--- a/index.html
+++ b/index.html
@@ -157,6 +157,23 @@
                 <button class="btn-cta" type="button">See Project</button>
               </div>
             </div>
+            <div class="card">
+              <img
+                src="images/card-placeholder.png"
+                alt="Portfolio image"
+                class="card__portfolio-img"
+              />
+              <div class="card__portfolio-info">
+                <h3 class="subheading">Multi-Post Stories Gain+Glory</h3>
+                <ul class="card__list">
+                  <li class="card__list-item">Ruby on Rails</li>
+                  <li class="card__list-item">css</li>
+                  <li class="card__list-item">JavaScript</li>
+                  <li class="card__list-item">HTML</li>
+                </ul>
+                <button class="btn-cta" type="button">See Project</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
