Add desktop navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             class="mobile-nav__hamburger"
           />
         </nav>
+        <nav class="desktop-nav">
+          <ul class="desktop-nav__list">
+            <li class="desktop-nav__el"><a href="#">Portfolio</a></li>
+            <li class="desktop-nav__el"><a href="#">About</a></li>
+            <li class="desktop-nav__el"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="main">
