--- a/index.html
+++ b/index.html
@@ -187,11 +187,13 @@
 
       <section class="section-about">
         <h2 class="section-heading">About me</h2>
-        <p class="base-text">
-          I can help you build a product, feature or website Look through some
-          of my work and experience! If you like what you see and have a project
-          you need coded, don’t hestiate to contact me.
-        </p>
+        <div class="container container--small">
+          <p class="base-text">
+            I can help you build a product, feature or website Look through some
+            of my work and experience! If you like what you see and have a
+            project you need coded, don’t hestiate to contact me.
+          </p>
+        </div>
         <button class="btn-cta" type="button">Get My Resume</button>
 
         <div class="section-about__skills">
