Style responsive hero section

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
             <h1 class="heading">Hey there. I'm Anuar</h1>
             <h2 class="heading--subtitle">I'm a software developer</h2>
           </div>
-          <p class="base-text">
-            I can help you build a product, feature or website. Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
-          <ul class="socials">
+          <div class="container container--small">
+            <p class="base-text section-hero__description">
+              I can help you build a product, feature or website. Look through
+              some of my work and experience! If you like what you see and have
+              a project you need coded, don’t hestiate to contact me.
+            </p>
+          </div>
+          <ul class="socials section-hero__socials">
             <li class="socials__item">
               <a href="#" class="socials__link"
                 ><img src="images/twitter.svg" alt=""
@@ -69,7 +71,7 @@
           <img
             src="images/button-arrow.svg"
             alt="Arrow down"
-            class="btn-arrow"
+            class="btn-arrow section-hero__arrow"
           />
         </div>
       </section>
