Style the responsive contact section, footer section, fix spacings between sections

--- a/index.html
+++ b/index.html
@@ -34,13 +34,11 @@
             <h1 class="heading">Hey there. I'm Anuar</h1>
             <h2 class="heading--subtitle">I'm a software developer</h2>
           </div>
-          <div class="container container--small">
-            <p class="base-text section-hero__description">
-              I can help you build a product, feature or website. Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
-            </p>
-          </div>
+          <p class="base-text section-hero__description">
+            I can help you build a product, feature or website. Look through
+            some of my work and experience! If you like what you see and have a
+            project you need coded, don’t hestiate to contact me.
+          </p>
           <ul class="socials section-hero__socials">
             <li class="socials__item">
               <a href="#" class="socials__link"
@@ -271,14 +269,14 @@
 
       <section class="section-contact">
         <div class="container">
-          <h2 class="section-heading">
+          <h2 class="section-heading section-contact__heading">
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
           </h2>
           <form
             action="https://formspree.io/f/mwkajyvy"
             method="post"
-            class="contact-form"
+            class="contact-form section-contact__form"
           >
             <input
               type="text"
