--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             <h1 class="heading">Hey there. I'm Anuar</h1>
             <h2 class="heading--subtitle">I'm a software developer</h2>
           </div>
-          <p class="base-text section-hero__description">
-            I can help you build a product, feature or website. Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
+          <div class="container container--small">
+            <p class="base-text section-hero__description">
+              I can help you build a product, feature or website. Look through
+              some of my work and experience! If you like what you see and have
+              a project you need coded, don’t hestiate to contact me.
+            </p>
+          </div>
           <ul class="socials section-hero__socials">
             <li class="socials__item">
               <a href="#" class="socials__link"
