--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Home Page</title>
+    <title>Anuar's Portfolio</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
