--- a/index.html
+++ b/index.html
@@ -30,13 +30,25 @@
             src="images/hamburger.svg"
             alt="Hamburger Icon"
             class="mobile-nav__hamburger"
+            id="hamburger"
           />
+          <img
+            src="images/close-menu.svg"
+            alt="Close Icon"
+            class="mobile-nav__hamburger mobile-nav__close hidden"
+            id="close"
+          />
+          <ul class="mobile-nav__list hidden" id="mobile-menu">
+            <li class="mobile-nav__el"><a href="#portfolio">Portfolio</a></li>
+            <li class="mobile-nav__el"><a href="#about">About</a></li>
+            <li class="mobile-nav__el"><a href="#contact">Contact</a></li>
+          </ul>
         </nav>
         <nav class="desktop-nav">
           <ul class="desktop-nav__list">
-            <li class="desktop-nav__el"><a href="#">Portfolio</a></li>
-            <li class="desktop-nav__el"><a href="#">About</a></li>
-            <li class="desktop-nav__el"><a href="#">Contact</a></li>
+            <li class="desktop-nav__el"><a href="#portfolio">Portfolio</a></li>
+            <li class="desktop-nav__el"><a href="#about">About</a></li>
+            <li class="desktop-nav__el"><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
