Add mobile menu JS functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             class="mobile-nav__hamburger mobile-nav__close hidden"
             id="close"
           />
-          <ul class="mobile-nav__list hidden" id="mobile-menu">
+          <ul class="mobile-nav__list hidden" id="menu">
             <li class="mobile-nav__el"><a href="#portfolio">Portfolio</a></li>
             <li class="mobile-nav__el"><a href="#about">About</a></li>
             <li class="mobile-nav__el"><a href="#contact">Contact</a></li>
@@ -101,7 +101,7 @@
           />
         </div>
       </section>
-      <section class="section-works">
+      <section class="section-works" id="portfolio">
         <div class="container">
           <h2 class="section-heading section-heading--underlined">
             My Recent Works
@@ -213,7 +213,7 @@
         </div>
       </section>
 
-      <section class="section-about">
+      <section class="section-about" id="about">
         <h2 class="section-heading">About me</h2>
         <div class="container container--small">
           <p class="base-text">
@@ -295,7 +295,7 @@
         </div>
       </section>
 
-      <section class="section-contact">
+      <section class="section-contact" id="contact">
         <div class="container">
           <h2 class="section-heading section-contact__heading">
             I'm always interested in hearing about new projects, so if you'd
@@ -366,5 +366,6 @@
         <p class="base-text">anuarshaidenov@gmail.com</p>
       </footer>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
