--- a/index.html
+++ b/index.html
@@ -366,6 +366,6 @@
         <p class="base-text">anuarshaidenov@gmail.com</p>
       </footer>
     </main>
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
