Add transition to mobile menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             class="mobile-nav__hamburger mobile-nav__close hidden"
             id="close"
           />
-          <ul class="mobile-nav__list hidden" id="menu">
+          <ul class="mobile-nav__list translated" id="menu">
             <li class="mobile-nav__el"><a href="#portfolio">Portfolio</a></li>
             <li class="mobile-nav__el"><a href="#about">About</a></li>
             <li class="mobile-nav__el"><a href="#contact">Contact</a></li>
