--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
+      gtag('js', new Date());
 
-      gtag("config", "G-86WDP63CE0");
+      gtag('config', 'G-86WDP63CE0');
     </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -109,7 +109,7 @@
           <div class="section-works__projects">
             <div class="card">
               <img
-                src="images/card-placeholder.png"
+                src="images/project-img.png"
                 alt="Portfolio image"
                 class="card__portfolio-img"
               />
@@ -126,7 +126,7 @@
             </div>
             <div class="card">
               <img
-                src="images/card-placeholder.png"
+                src="images/project-img.png"
                 alt="Portfolio image"
                 class="card__portfolio-img"
               />
@@ -143,7 +143,7 @@
             </div>
             <div class="card">
               <img
-                src="images/card-placeholder.png"
+                src="images/project-img.png"
                 alt="Portfolio image"
                 class="card__portfolio-img"
               />
@@ -160,7 +160,7 @@
             </div>
             <div class="card">
               <img
-                src="images/card-placeholder.png"
+                src="images/project-img.png"
                 alt="Portfolio image"
                 class="card__portfolio-img"
               />
@@ -177,7 +177,7 @@
             </div>
             <div class="card">
               <img
-                src="images/card-placeholder.png"
+                src="images/project-img.png"
                 alt="Portfolio image"
                 class="card__portfolio-img"
               />
@@ -194,7 +194,7 @@
             </div>
             <div class="card">
               <img
-                src="images/card-placeholder.png"
+                src="images/project-img.png"
                 alt="Portfolio image"
                 class="card__portfolio-img"
               />
