Restyle the popup modal

--- a/index.html
+++ b/index.html
@@ -263,37 +263,41 @@
         <p class="base-text">anuarshaidenov@gmail.com</p>
       </footer>
     </main>
-    <div class="backdrop hidden" id="backdrop"></div>
-    <div class="modal-project hidden" id="modal">
-      <button class="btn-close modal-project__close-btn" id="close-modal">
-        <img src="./images/close-menu.svg" alt="Close Icon" />
-      </button>
-      <img
-        src="./images/project-img.png"
-        alt=""
-        class="modal-project__img"
-        id="modal-img"
-      />
-      <h3 class="subheading modal-project__title" id="modal-title">
-        Keeping track of hundreds of components
-      </h3>
-      <ul class="tech-list modal-project__tech-list" id="modal-list"></ul>
-      <p class="base-text modal-project__text" id="modal-description">
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the
-        printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a
-        galley of type and scrambled it 1960s with the relea
-      </p>
-      <div class="modal-project__buttons">
-        <a href="#" target="_blank" id="modal-live" class="btn-cta">See Live</a>
-        <a href="#" target="_blank" id="modal-source" class="btn-cta"
-          >See Source</a
-        >
+    <div class="backdrop hidden" id="backdrop">
+      <div class="modal-project hidden" id="modal">
+        <button class="btn-close modal-project__close-btn" id="close-modal">
+          <img src="./images/close-menu.svg" alt="Close Icon" />
+        </button>
+        <img
+          src="./images/project-img.png"
+          alt=""
+          class="modal-project__img"
+          id="modal-img"
+        />
+        <h3 class="subheading modal-project__title" id="modal-title">
+          Keeping track of hundreds of components
+        </h3>
+        <ul class="tech-list modal-project__tech-list" id="modal-list"></ul>
+        <p class="base-text modal-project__text" id="modal-description">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it 1960s with the releaLorem Ipsum is simply dummy text of
+          the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown
+          printer took a galley of type and scrambled it 1960s with the relea
+        </p>
+        <div class="modal-project__buttons">
+          <a href="#" target="_blank" id="modal-live" class="btn-cta"
+            >See Live</a
+          >
+          <a href="#" target="_blank" id="modal-source" class="btn-cta"
+            >See Source</a
+          >
+        </div>
       </div>
     </div>
+
     <script src="./js/script.js"></script>
     <script src="./js/cards.js"></script>
     <script src="./js/modal.js"></script>
