Add icons to the modal cta buttons

--- a/index.html
+++ b/index.html
@@ -289,11 +289,14 @@
         </p>
         <div class="modal-project__buttons">
           <a href="#" target="_blank" id="modal-live" class="btn-cta"
-            >See Live</a
-          >
+            >See Live
+            <span
+              ><img src="./images/live-link-icon.svg" alt="Live Icon" /></span
+          ></a>
           <a href="#" target="_blank" id="modal-source" class="btn-cta"
-            >See Source</a
-          >
+            >See Source<span
+              ><img src="./images/source-icon.svg" alt="Source Icon" /></span
+          ></a>
         </div>
       </div>
     </div>
