Add smooth scroll functionality

--- a/index.html
+++ b/index.html
@@ -39,16 +39,28 @@
             id="close"
           />
           <ul class="mobile-nav__list translated" id="menu">
-            <li class="mobile-nav__el"><a href="#portfolio">Portfolio</a></li>
-            <li class="mobile-nav__el"><a href="#about">About</a></li>
-            <li class="mobile-nav__el"><a href="#contact">Contact</a></li>
+            <li class="mobile-nav__el">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="mobile-nav__el">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="mobile-nav__el">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
           </ul>
         </nav>
         <nav class="desktop-nav">
           <ul class="desktop-nav__list">
-            <li class="desktop-nav__el"><a href="#portfolio">Portfolio</a></li>
-            <li class="desktop-nav__el"><a href="#about">About</a></li>
-            <li class="desktop-nav__el"><a href="#contact">Contact</a></li>
+            <li class="desktop-nav__el">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="desktop-nav__el">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="desktop-nav__el">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -302,6 +314,7 @@
     </div>
 
     <script src="./js/script.js"></script>
+    <script src="./js/scroll.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
