Style the email form validation

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
               required
             ></textarea>
             <button type="submit" class="btn-cta">Get in touch</button>
+            <p class="contact-form__error invisible">
+              Email should be written in lowercase
+            </p>
           </form>
         </div>
       </section>
