--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             like to chat please get in touch.
           </h2>
           <form
+            id="form"
             action="https://formspree.io/f/mwkajyvy"
             method="post"
             class="contact-form section-contact__form"
@@ -220,7 +221,6 @@
               placeholder="Full name"
               class="contact-form__input"
               maxlength="30"
-              required
             />
             <input
               type="email"
@@ -228,7 +228,6 @@
               id="email"
               placeholder="Email address"
               class="contact-form__input"
-              required
             />
             <textarea
               name="text"
@@ -238,10 +237,9 @@
               class="contact-form__textarea"
               placeholder="Enter text here"
               maxlength="500"
-              required
             ></textarea>
             <button type="submit" class="btn-cta">Get in touch</button>
-            <p class="contact-form__error invisible">
+            <p id="error-msg" class="contact-form__error invisible">
               Email should be written in lowercase
             </p>
           </form>
@@ -319,5 +317,6 @@
     <script src="./js/script.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/modal.js"></script>
+    <script src="./js/formValidation.js"></script>
   </body>
 </html>
