Fix form validation script and add error animation

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
               placeholder="Full name"
               class="contact-form__input"
               maxlength="30"
+              required
             />
             <input
               type="email"
@@ -228,6 +229,7 @@
               id="email"
               placeholder="Email address"
               class="contact-form__input"
+              required
             />
             <textarea
               name="text"
@@ -237,6 +239,7 @@
               class="contact-form__textarea"
               placeholder="Enter text here"
               maxlength="500"
+              required
             ></textarea>
             <button type="submit" class="btn-cta">Get in touch</button>
             <p id="error-msg" class="contact-form__error invisible">
