Add getting and writing to local storage functionality

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
               type="text"
               placeholder="Full name"
               class="contact-form__input"
+              id="name"
               maxlength="30"
               required
             />
@@ -317,6 +318,7 @@
       </div>
     </div>
 
+    <script src="./js/localStorage.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/modal.js"></script>
