Use modules: change use global index js file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anuar's Portfolio</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script defer type="module" src="./js/index.js"></script>
   </head>
   <body>
     <header class="header">
@@ -317,11 +318,5 @@
         </div>
       </div>
     </div>
-
-    <script src="./js/localStorage.js"></script>
-    <script src="./js/script.js"></script>
-    <script src="./js/scroll.js"></script>
-    <script src="./js/modal.js"></script>
-    <script src="./js/formValidation.js"></script>
   </body>
 </html>
