--- a/index.html
+++ b/index.html
@@ -82,28 +82,27 @@
           </div>
           <ul class="socials section-hero__socials">
             <li class="socials__item">
-              <a href="#" class="socials__link"
+              <a
+                href="https://twitter.com/anuarnyi"
+                target="_blank"
+                class="socials__link"
                 ><img src="images/twitter.svg" alt="Twitter Icon"
               /></a>
             </li>
             <li class="socials__item">
-              <a href="#" class="socials__link"
+              <a
+                href="https://github.com/anuarshaidenov"
+                target="_blank"
+                class="socials__link"
                 ><img src="images/github.svg" alt="Github Icon"
               /></a>
             </li>
             <li class="socials__item">
-              <a href="#" class="socials__link"
+              <a
+                href="https://www.linkedin.com/in/anuar-shaidenov-365a951b8/"
+                targer="_blank"
+                class="socials__link"
                 ><img src="images/linkedin.svg" alt="LinkedIn Icon"
-              /></a>
-            </li>
-            <li class="socials__item">
-              <a href="#" class="socials__link"
-                ><img src="images/medium.svg" alt="Medium Icon"
-              /></a>
-            </li>
-            <li class="socials__item">
-              <a href="#" class="socials__link"
-                ><img src="images/angellist.svg" alt="Angellist Icon"
               /></a>
             </li>
           </ul>
@@ -132,7 +131,13 @@
             project you need coded, don’t hestiate to contact me.
           </p>
         </div>
-        <button class="btn-cta" type="button">Get My Resume</button>
+        <a
+          href="https://docs.google.com/document/d/1f_4vgUMm2N-zE9PdQBxnkClkuqeeNgrfTCNu0OCS7wU/edit?usp=sharing"
+          target="_blank"
+          class="btn-cta"
+          type="button"
+          >Get My Resume</a
+        >
 
         <div class="section-about__skills">
           <ul class="container">
@@ -146,10 +151,11 @@
                   <li class="card__list-item card__list-item--skill">
                     JavaScript
                   </li>
-                  <li class="card__list-item card__list-item--skill">Ruby</li>
                   <li class="card__list-item card__list-item--skill">HTML</li>
                   <li class="card__list-item card__list-item--skill">CSS</li>
                   <li class="card__list-item card__list-item--skill">SCSS</li>
+                  <li class="card__list-item card__list-item--skill">Python</li>
+                  <li class="card__list-item card__list-item--skill">C++</li>
                 </ul>
               </div>
             </li>
@@ -164,16 +170,7 @@
                     JavaScript
                   </li>
                   <li class="card__list-item card__list-item--skill">React</li>
-                  <li class="card__list-item card__list-item--skill">
-                    Ruby on Rails
-                  </li>
-                  <li class="card__list-item card__list-item--skill">RSpec</li>
-                  <li class="card__list-item card__list-item--skill">
-                    Capybara
-                  </li>
-                  <li class="card__list-item card__list-item--skill">
-                    Selenium
-                  </li>
+                  <li class="card__list-item card__list-item--skill">NodeJS</li>
                 </ul>
               </div>
             </li>
@@ -184,20 +181,17 @@
                 </div>
                 <h3 class="subheading">Skills</h3>
                 <ul class="card__list">
+                  <li class="card__list-item card__list-item--skill">BEM</li>
                   <li class="card__list-item card__list-item--skill">
-                    JavaScript
+                    Component-based Development
                   </li>
                   <li class="card__list-item card__list-item--skill">
-                    Codekit
+                    Git/Github
                   </li>
-                  <li class="card__list-item card__list-item--skill">Github</li>
                   <li class="card__list-item card__list-item--skill">
-                    Codepen
+                    Responsive Design
                   </li>
-                  <li class="card__list-item card__list-item--skill">Gitlab</li>
-                  <li class="card__list-item card__list-item--skill">
-                    Terminal
-                  </li>
+                  <li class="card__list-item card__list-item--skill">Figma</li>
                 </ul>
               </div>
             </li>
@@ -253,28 +247,27 @@
       <footer class="section-footer">
         <ul class="socials section-footer__socials">
           <li class="socials__item">
-            <a href="#" class="socials__link"
+            <a
+              href="https://twitter.com/anuarnyi"
+              target="_blank"
+              class="socials__link"
               ><img src="images/twitter.svg" alt="Twitter Icon"
             /></a>
           </li>
           <li class="socials__item">
-            <a href="#" class="socials__link"
+            <a
+              href="https://github.com/anuarshaidenov"
+              target="_blank"
+              class="socials__link"
               ><img src="images/github.svg" alt="Github Icon"
             /></a>
           </li>
           <li class="socials__item">
-            <a href="#" class="socials__link"
+            <a
+              href="https://www.linkedin.com/in/anuar-shaidenov-365a951b8/"
+              targer="_blank"
+              class="socials__link"
               ><img src="images/linkedin.svg" alt="LinkedIn Icon"
-            /></a>
-          </li>
-          <li class="socials__item">
-            <a href="#" class="socials__link"
-              ><img src="images/medium.svg" alt="Medium Icon"
-            /></a>
-          </li>
-          <li class="socials__item">
-            <a href="#" class="socials__link"
-              ><img src="images/angellist.svg" alt="Angellist Icon"
             /></a>
           </li>
         </ul>
