Add medium link

--- a/index.html
+++ b/index.html
@@ -83,14 +83,6 @@
           <ul class="socials section-hero__socials">
             <li class="socials__item">
               <a
-                href="https://twitter.com/anuarnyi"
-                target="_blank"
-                class="socials__link"
-                ><img src="images/twitter.svg" alt="Twitter Icon"
-              /></a>
-            </li>
-            <li class="socials__item">
-              <a
                 href="https://github.com/anuarshaidenov"
                 target="_blank"
                 class="socials__link"
@@ -103,6 +95,22 @@
                 targer="_blank"
                 class="socials__link"
                 ><img src="images/linkedin.svg" alt="LinkedIn Icon"
+              /></a>
+            </li>
+            <li class="socials__item">
+              <a
+                href="https://medium.com/@anuarshaidenov"
+                target="_blank"
+                class="socials__link"
+                ><img src="images/medium.svg" alt="Medium Icon"
+              /></a>
+            </li>
+            <li class="socials__item">
+              <a
+                href="https://twitter.com/anuarnyi"
+                target="_blank"
+                class="socials__link"
+                ><img src="images/twitter.svg" alt="Twitter Icon"
               /></a>
             </li>
           </ul>
@@ -248,14 +256,6 @@
         <ul class="socials section-footer__socials">
           <li class="socials__item">
             <a
-              href="https://twitter.com/anuarnyi"
-              target="_blank"
-              class="socials__link"
-              ><img src="images/twitter.svg" alt="Twitter Icon"
-            /></a>
-          </li>
-          <li class="socials__item">
-            <a
               href="https://github.com/anuarshaidenov"
               target="_blank"
               class="socials__link"
@@ -268,6 +268,22 @@
               targer="_blank"
               class="socials__link"
               ><img src="images/linkedin.svg" alt="LinkedIn Icon"
+            /></a>
+          </li>
+          <li class="socials__item">
+            <a
+              href="https://medium.com/@anuarshaidenov"
+              target="_blank"
+              class="socials__link"
+              ><img src="images/medium.svg" alt="Medium Icon"
+            /></a>
+          </li>
+          <li class="socials__item">
+            <a
+              href="https://twitter.com/anuarnyi"
+              target="_blank"
+              class="socials__link"
+              ><img src="images/twitter.svg" alt="Twitter Icon"
             /></a>
           </li>
         </ul>
