Fix linked in link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <li class="socials__item">
               <a
                 href="https://www.linkedin.com/in/anuar-shaidenov-365a951b8/"
-                targer="_blank"
+                target="_blank"
                 class="socials__link"
                 ><img src="images/linkedin.svg" alt="LinkedIn Icon"
               /></a>
@@ -265,7 +265,7 @@
           <li class="socials__item">
             <a
               href="https://www.linkedin.com/in/anuar-shaidenov-365a951b8/"
-              targer="_blank"
+              target="_blank"
               class="socials__link"
               ><img src="images/linkedin.svg" alt="LinkedIn Icon"
             /></a>
