Update the heading

--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
         <div class="container">
           <div class="section-hero__text">
             <h1 class="heading">Hey there. I'm Anuar</h1>
-            <h2 class="heading--subtitle">I'm a software developer</h2>
+            <h2 class="heading--subtitle">
+              I'm a Frontend developer | UI/UX Designer
+            </h2>
           </div>
           <div class="container container--small">
             <p class="base-text section-hero__description">
-              I can help you build a product, feature or website. Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
+              I can help you build a product, a feature or a website. Look
+              through some of my work and experience! If you like what you see
+              and have a project you need coded, don’t hestiate to contact me.
             </p>
           </div>
           <ul class="socials section-hero__socials">
