Update the heading

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <div class="section-hero__text">
             <h1 class="heading">Hey there. I'm Anuar</h1>
             <h2 class="heading--subtitle">
-              I'm a Frontend developer | UI/UX Designer
+              I'm a Frontend developer <br />
+              UI/UX Designer
             </h2>
           </div>
           <div class="container container--small">
