--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
           </div>
           <div class="container container--small">
             <p class="base-text section-hero__description">
-              I can help you build a product, a feature or a website. Look
-              through some of my work and experience! If you like what you see
-              and have a project you need coded, don’t hestiate to contact me.
+              I can help you boost your business. Look through some of my work
+              and experience! If you like what you see and have a project you
+              want to discuss, don’t hestiate to contact me.
             </p>
           </div>
           <ul class="socials section-hero__socials">
@@ -137,9 +137,8 @@
         <h2 class="section-heading">About me</h2>
         <div class="container container--small">
           <p class="base-text">
-            I can help you build a product, feature or website Look through some
-            of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
+            I specialize in JavaScript, HTML, CSS, and I’m very passionate about
+            UI/UX design and writing clean and maintainable code.
           </p>
         </div>
         <a
@@ -181,6 +180,7 @@
                     JavaScript
                   </li>
                   <li class="card__list-item card__list-item--skill">React</li>
+                  <li class="card__list-item card__list-item--skill">Redux</li>
                   <li class="card__list-item card__list-item--skill">NodeJS</li>
                 </ul>
               </div>
